--- a/public/css/fontello/demo.html
+++ b/public/css/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?76346373');
-      src: url('./font/fontello.eot?76346373#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?76346373') format('woff'),
-           url('./font/fontello.ttf?76346373') format('truetype'),
-           url('./font/fontello.svg?76346373#fontello') format('svg');
+      src: url('./font/fontello.eot?96084814');
+      src: url('./font/fontello.eot?96084814#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?96084814') format('woff'),
+           url('./font/fontello.ttf?96084814') format('truetype'),
+           url('./font/fontello.svg?96084814#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -298,14 +298,20 @@ body {
     </div>
     <div class="container" id="icons">
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe800"><i class="demo-icon icon-edit">&#xe800;</i> <span class="i-name">icon-edit</span><span class="i-code">0xe800</span></div>
-        <div class="the-icons span3" title="Code: 0xe801"><i class="demo-icon icon-list-add">&#xe801;</i> <span class="i-name">icon-list-add</span><span class="i-code">0xe801</span></div>
-        <div class="the-icons span3" title="Code: 0xe802"><i class="demo-icon icon-trash-empty">&#xe802;</i> <span class="i-name">icon-trash-empty</span><span class="i-code">0xe802</span></div>
-        <div class="the-icons span3" title="Code: 0xe803"><i class="demo-icon icon-plus">&#xe803;</i> <span class="i-name">icon-plus</span><span class="i-code">0xe803</span></div>
+        <div class="the-icons span3" title="Code: 0xe800"><i class="demo-icon icon-check">&#xe800;</i> <span class="i-name">icon-check</span><span class="i-code">0xe800</span></div>
+        <div class="the-icons span3" title="Code: 0xe801"><i class="demo-icon icon-pencil">&#xe801;</i> <span class="i-name">icon-pencil</span><span class="i-code">0xe801</span></div>
+        <div class="the-icons span3" title="Code: 0xe802"><i class="demo-icon icon-list-add">&#xe802;</i> <span class="i-name">icon-list-add</span><span class="i-code">0xe802</span></div>
+        <div class="the-icons span3" title="Code: 0xe803"><i class="demo-icon icon-user-add">&#xe803;</i> <span class="i-name">icon-user-add</span><span class="i-code">0xe803</span></div>
       </div>
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe804"><i class="demo-icon icon-mail">&#xe804;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe804</span></div>
+        <div class="the-icons span3" title="Code: 0xe804"><i class="demo-icon icon-user-add-outline">&#xe804;</i> <span class="i-name">icon-user-add-outline</span><span class="i-code">0xe804</span></div>
+        <div class="the-icons span3" title="Code: 0xe805"><i class="demo-icon icon-user-add-1">&#xe805;</i> <span class="i-name">icon-user-add-1</span><span class="i-code">0xe805</span></div>
+        <div class="the-icons span3" title="Code: 0xe806"><i class="demo-icon icon-trash-empty">&#xe806;</i> <span class="i-name">icon-trash-empty</span><span class="i-code">0xe806</span></div>
+        <div class="the-icons span3" title="Code: 0xe807"><i class="demo-icon icon-mail">&#xe807;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe807</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xf0ca"><i class="demo-icon icon-list-bullet">&#xf0ca;</i> <span class="i-name">icon-list-bullet</span><span class="i-code">0xf0ca</span></div>
+        <div class="the-icons span3" title="Code: 0xf1f8"><i class="demo-icon icon-trash">&#xf1f8;</i> <span class="i-name">icon-trash</span><span class="i-code">0xf1f8</span></div>
         <div class="the-icons span3" title="Code: 0xf234"><i class="demo-icon icon-user-plus">&#xf234;</i> <span class="i-name">icon-user-plus</span><span class="i-code">0xf234</span></div>
       </div>
     </div>
