--- a/public/css/fontello/demo.html
+++ b/public/css/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?22051024');
-      src: url('./font/fontello.eot?22051024#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?22051024') format('woff'),
-           url('./font/fontello.ttf?22051024') format('truetype'),
-           url('./font/fontello.svg?22051024#fontello') format('svg');
+      src: url('./font/fontello.eot?85015453');
+      src: url('./font/fontello.eot?85015453#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?85015453') format('woff'),
+           url('./font/fontello.ttf?85015453') format('truetype'),
+           url('./font/fontello.svg?85015453#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -312,10 +312,12 @@ body {
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe808"><i class="demo-icon icon-plus">&#xe808;</i> <span class="i-name">icon-plus</span><span class="i-code">0xe808</span></div>
         <div class="the-icons span3" title="Code: 0xe809"><i class="demo-icon icon-left-outline">&#xe809;</i> <span class="i-name">icon-left-outline</span><span class="i-code">0xe809</span></div>
+        <div class="the-icons span3" title="Code: 0xe80a"><i class="demo-icon icon-info-circled">&#xe80a;</i> <span class="i-name">icon-info-circled</span><span class="i-code">0xe80a</span></div>
         <div class="the-icons span3" title="Code: 0xf0ca"><i class="demo-icon icon-list-bullet">&#xf0ca;</i> <span class="i-name">icon-list-bullet</span><span class="i-code">0xf0ca</span></div>
-        <div class="the-icons span3" title="Code: 0xf1f8"><i class="demo-icon icon-trash">&#xf1f8;</i> <span class="i-name">icon-trash</span><span class="i-code">0xf1f8</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf129"><i class="demo-icon icon-info">&#xf129;</i> <span class="i-name">icon-info</span><span class="i-code">0xf129</span></div>
+        <div class="the-icons span3" title="Code: 0xf1f8"><i class="demo-icon icon-trash">&#xf1f8;</i> <span class="i-name">icon-trash</span><span class="i-code">0xf1f8</span></div>
         <div class="the-icons span3" title="Code: 0xf234"><i class="demo-icon icon-user-plus">&#xf234;</i> <span class="i-name">icon-user-plus</span><span class="i-code">0xf234</span></div>
       </div>
     </div>
